---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 2
@main(v0: int) {
.b1_:
  c2_: int = const 0;
  v3_: bool = eq c2_ v0;
  c4_: int = const 1;
  print c4_;
  br v3_ .b5_ .b6_;
.b5_:
  ret;
  jmp .b7_;
.b6_:
  v8_: bool = lt c4_ v0;
  print c4_;
  v9_: int = id c4_;
  v10_: int = id c4_;
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> cdb622b7 (snapshots)
  v11_: int = id c4_;
  v12_: int = id v0;
  br v8_ .b13_ .b14_;
.b13_:
  v15_: int = id c4_;
  v16_: int = id c4_;
  v17_: int = id c4_;
  v18_: int = id v0;
.b19_:
  v20_: int = add v16_ v17_;
  print v20_;
  c21_: int = const 1;
  v22_: int = add c21_ v15_;
  v23_: bool = lt v22_ v18_;
  v15_: int = id v22_;
  v16_: int = id v20_;
  v17_: int = id v16_;
  v18_: int = id v18_;
  br v23_ .b19_ .b24_;
.b24_:
<<<<<<< HEAD
  v9_: int = id v15_;
  v10_: int = id v16_;
  v11_: int = id v17_;
  v12_: int = id v18_;
  ret;
  jmp .b7_;
.b14_:
=======
  v11_: int = id v0;
.b12_:
  v13_: bool = lt v8_ v11_;
  v14_: int = id v8_;
  v15_: int = id v9_;
  v16_: int = id v10_;
  br v13_ .b17_ .b18_;
.b17_:
  v19_: int = add v10_ v9_;
  print v19_;
  c20_: int = const 1;
  v21_: int = add c20_ v8_;
  v14_: int = id v21_;
  v15_: int = id v19_;
  v16_: int = id v9_;
.b18_:
  v22_: int = select v13_ v9_ v10_;
  v8_: int = id v14_;
  v9_: int = id v15_;
  v10_: int = id v22_;
  v11_: int = id v11_;
  br v13_ .b12_ .b23_;
.b23_:
>>>>>>> bd5b3865 (snapshots)
=======
  v9_: int = id v15_;
  v10_: int = id v16_;
  v11_: int = id v17_;
  v12_: int = id v18_;
  ret;
  jmp .b7_;
.b14_:
>>>>>>> cdb622b7 (snapshots)
  ret;
.b7_:
}
